Added my website files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-Hello World
+<!DOCTYPE html>
+<html>
+	<link rel="stylesheet" href = "WebpageStyle.css">
+<head>
+
+<title> Sahithi Tummala's Portfolio </title>
+
+
+</head>
+
+<body>
+
+
+<h1> <div> <center> Sahithi Tummala's Portfolio </h1> </div> </center>
+
+
+<h5> <div> Address: 822 Teasel Ln, Aurora, IL 60504 </div> 
+<div>Phone: 630-518-8502 </div>
+<div> Email: sahithi_tummala@yahoo.com </h5> </div>
+
+
+
+
+<div>  <strong> <h4> <center> About:</strong> </h4> </center>
+
+
+<p> I am a motivated and a hard-working student interested in Computer Science. I am going to be a 12th grader at Metea Valley High School, and I will be applying to college in the fall. If I am not working on academics, I am either playing my violin, taking walks outside, or hanging out with my friends." </p>
+
+
+
+
+<div> <h4> <strong> <center> Activities and Accomplishments:</strong> </div> </h4> </center>
+
+<div> <h5> <strong> Robotics Club (2015-present): </strong> </h5> </div>
+<div> Reached semifinals at a Neuqua Valley Robotics Competition </div> 
+<div> Participated at the 2018 VEX Robotics World Competition in Louisville, Kentucky in the past year. </div>
+<div> Led a girls only robotics team </div>
+<div> Reached Quarterfinals at a Neuqua Valley Robotics Competition. </div>
+
+
+<div> <h5> <strong> Violin (2013-present): </strong> </h5> </div>
+<div> Earned 1st Chair rank in Symphonic Orchestra </div>
+<div> Won a positive referral for outstanding hard work, integrity, and musicianship. </div> 
+<div> Became a member of Chamber Orchestra (second best orchestra) </div>
+
+
+
+<div> <h4> <center> <strong> My Coding Projects: </strong> </center> </h4> </div>
+
+<div> <h5> <strong> Here are the projects I made on Scratch. </strong> </h5> </div>
+
+<iframe src="https://scratch.mit.edu/projects/318757416/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+
+<iframe src="https://scratch.mit.edu/projects/318574434/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+
+<iframe src="https://scratch.mit.edu/projects/318433977/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+
+<div> <h5> <em> <center> If you want to hear me play the violin, check out this video! </div> </em> </h5> </center>
+
+<div> <h4> <iframe width="560" height="315" src="https://www.youtube.com/embed/zjEmBPcQe7M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div> </h4>
+
+</body>
+
+</html>
