--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div>  <strong> <h4> <center> About:</strong> </h4> </center>
 
 
-<p> I am a motivated and a hard-working student interested in Computer Science. I am going to be a 12th grader at Metea Valley High School, and I will be applying to college in the fall. If I am not working on academics, I am either playing my violin, taking walks outside, or hanging out with my friends." </p>
+<p> I am a motivated and a hard-working student interested in Computer Science. I am going to be a 12th grader at Metea Valley High School, and I will be applying to college in the fall. If I am not working on academics, I am either playing my violin, taking walks outside, or hanging out with my friends. </p>
 
 
 
